# remote-email-filtering

./: .gitignore  COPYING  Cargo.toml  README.md  README.rst  pyproject.toml  requirements.txt
doc/register_app/google/: README.md
doc/register_app/microsoft/: README.md
doc/src/: api.rst  conf.py  getting_started.rst  index.rst  introduction.rst
doc/src/_templates/autosummary/: class.rst
src/: actions.rs  auth.rs  client.rs  filters.rs  folder.rs  lib.rs  main.rs  types.rs
src/remote_email_filtering/: __init__.py  action.py  auth.py  main.py  message.py  remote.py  types.py
utils/: authorized_oauth2_google.py  authorized_oauth2_msal.py  list_dirs.py  refresh_oauth2_google.py
utils/google_oauth2_auth/: main.rs
utils/microsoft_oauth2_auth/: main.rs
