[package]
name = "remote-email-filtering"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls-webpki = "0.102"
anyhow = "1.0.89"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.4.13", features = ["derive"] }
email-lib = { version = "0.26.4", features = ["imap", "keyring", "oauth2"] }
http = "=1.1.0"
maybe-owned = "0.3.4"
oauth2 ={ version = "5.0.0-rc.1" }
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
url = "2.5.2"
secrecy = { version = "0.10.3", features = ["serde"] }
status-line = "0.2.0"

[lib]
name = "remote_email_filtering"
path = "src/lib.rs"

[[bin]]
name = "filter-emails"
path = "src/main.rs"

[[bin]]
name = "microsoft-oauth2-auth"
path = "utils/microsoft_oauth2_auth/main.rs"
