[package]
name = "remote-email-filtering"
version = "0.3.0"
edition = "2024"

[features]
# Log all IMAP messages including authentication tokens during login.
insecure-raw-logging = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch."crates-io"]
async-imap = { git = 'https://github.com/gauravjuvekar/async-imap.git', branch = 'capabilities-before-auth'}
# async-imap = { path = '../async-imap/' }

[dependencies]
rustls-webpki = "0.102"
anyhow = "1.0.89"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.4.13", features = ["derive"] }
http = "=1.1.0"
maybe-owned = "0.3.4"
oauth2 ={ version = "5.0.0-rc.1" }
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
url = "2.5.2"
secrecy = { version = "0.10.3", features = ["serde"] }
status-line = "0.2.0"
qr2term = "0.3.3"
tokio = { version = "1.49.0", features = ["full"] }
async-imap = { version = "0.11.1", features = ["runtime-tokio"], default-features = false }
rsasl = { version = "2.2.0", default-features = false, features = ["config_builder", "oauthbearer", "provider", "provider_base64", "registry_static", "xoauth2"] }
logged-stream = "0.4.1"
tokio-rustls = "0.26.4"
rustls = "0.23.36"
webpki-roots = "1.0.5"

[lib]
name = "remote_email_filtering"
path = "src/lib.rs"

[[bin]]
name = "filter-emails"
path = "src/main.rs"
